build(ci): restore green jacoco gate and sonarlint clean
- add NodeOperationEntity/OutboxEventEntity unit tests (+32 lines)
  pushing line coverage over the 0.90 threshold
- split NotificationSocketHandler ticket parsing into helper (S3776)
- extract OutboxEventJob per-event handling into processEvent (S3776)
- use Math.clamp in WsTicketStore (S6885)
- add no-op comments to MdcFilter test stub spans (S1186)
- drop redundant eq() matchers in OutboxEventClaimerTest (S6068)